feat: added author response type to chime responses
